# CUDA-GEMM

./: CMakeLists.txt  README.md  pyproject.toml  pytest.ini  setup.py
benchmark/: __init__.py
benchmark/harness/: baselines.py  cases.py  reporting.py  runner.py
benchmark/kernels/: __init__.py
benchmark/kernels/primitives/: matmul.py
benchmark/profiling/: common.py
benchmark/profiling/ncu/: target.py
benchmark/profiling/nsys/: run.sh  target.py
benchmark/reports/timing/matmul/20260529_204243/: compare_matmul_M_20260529_204243.json  compare_matmul_M_20260529_204243_final.txt  matmul_benchmark_sweepM_20260529_204243.json
benchmark/reports/timing/matmul/20260529_205940/: compare_matmul_M_20260529_205940.json  compare_matmul_M_20260529_205940_final.txt  matmul_benchmark_sweepM_20260529_205940.json
benchmark/utils/: bench_core.py  parse_ncu_csv.py  timer.py
benchmarks/harness/: cases.py  reporting.py  runner.py
benchmarks/profiling/: common.py
benchmarks/profiling/ncu/: parse_csv.py  run.sh  target.py
benchmarks/profiling/nsys/: target.py
benchmarks/reports/timing/matmul/20260528_125054/: compare_matmul_M_20260528_125054.json  matmul_benchmark_sweepM_20260528_125054.json  matmul_benchmark_sweepM_20260528_125054_final.txt
benchmarks/reports/timing/matmul/20260528_210234/: compare_matmul_M_20260528_210234.json  compare_matmul_M_20260528_210234_final.txt  matmul_benchmark_sweepM_20260528_210234.json
benchmarks/utils/: bench_core.py  flop_counter.py  parse_ncu_csv.py  timer.py
csrc/bindings/: primitives.cpp  register.h  runtime.cpp
csrc/primitives/matmul/: matmul.cu  matmul.h  matmul_dispatch.cuh
csrc/primitives/matmul/kernels/: block_tiling.cuh  naive_gemm.cuh  register_tiling.cuh  thread_coarsened.cuh  vectorized.cuh  warp_tiling.cuh
scripts/: build.sh
src/cuda_gemm/: __init__.py
src/cuda_gemm/backends/: __init__.py
src/cuda_gemm/backends/cuda/: __init__.py  loader.py
tests/: conftest.py
tests/benchmarks/: __init__.py  test_cli_smoke.py  test_harness_metrics.py  test_profiling_common.py  test_reporting.py
tests/parity/: __init__.py  test_cuda_gemm_matmul.py
